[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Images/settings.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/space.png" type="Texture" id=2]
[ext_resource path="res://Themes/themeMenu.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=4]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="texLogo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.1
texture = ExtResource( 1 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labFreeUpgs" type="Label" parent="."]
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.2
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Free Upgrades"
align = 1
valign = 1

[node name="btnFreeUpgs" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.2
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
text = "Off"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnBack" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 0.3
anchor_bottom = 1.0
margin_top = -125.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btnFreeUpgs" to="." method="_on_btnFreeUpgs_pressed"]
[connection signal="pressed" from="btnBack" to="." method="_on_btnBack_pressed"]
